objects/Account_Owner_Sharing__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Access_Level__c</fullName>
        <label>Activity Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Access_Level__c</fullName>
        <label>Device Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Owner_Sharings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Demos_Access_Level__c</fullName>
        <label>Services Demos Access Level</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Access_Levels</valueSetName>
        </valueSet>
    </fields>
    <label>PT Account Owner Sharing</label>
    <nameField>
        <label>Account Owner Sharing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Owner Sharings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>